--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </div>
             <!-- menu burger -->
 
-              <div id="wrapper" class="d-xl-none">
-                  <div class="circle icon" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <div id="wrapper" class="d-xl-none" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                  <div class="circle icon">
                       <span class="line top"></span>
                       <span class="line middle"></span>
                       <span class="line bottom"></span>
