--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </nav>
       </header>
       <!-- main -->
-      <main class="main d-flex justify-content-center flex-column">
+      <main class="main d-md-flex justify-content-center align-items-center flex-column">
       <!-- carousel -->
         <div class="owl-carousel owl-theme">
           <div class="item1">
@@ -75,7 +75,23 @@
                 <img class="img" src="assets/img/IMG_6850.jpg" alt="">
               </div>
         </div>
-        <h1 class="title text-center font-weight-bold">Chambly International</h1>
+        <!-- présentation -->
+          <h1 class="title p-2 d-flex align-items-center justify-content-center text-center font-weight-bold">Chambly International</h1>
+          <div class="row d-flex justify-content-center">
+            <div class="col-md-4 p-4 m-2">
+              <h2 class="font-weight-bold">Qui somme nous ?</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            </div>
+            <div class="col-md-4 p-4 m-2">
+              <h2 class="font-weight-bold">Nos Objectifs : </h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            </div>
+          </div>
+          <!-- donation -->
+          <div class=" mt-4 donation d-flex justify-content-center align-items-center flex-column">
+            <h3 class="text-white font-weight-bold text-center m-4">Pour soutenir l'association</h3>
+            <a href="#" class="don text-decoration-none font-weight-bold m-4 pl-4 pr-4 pt-1 pb-1">Faire un don</a>
+          </div>
       </main>
       <!-- footer -->
       <footer>
