--- a/index-maquette-3.html
+++ b/index-maquette-3.html
@@ -15,11 +15,11 @@
   </head>
   <body>
     <!-- container bootstrap -->
-    <div class="container-fluid m-0 p-0">
+    <div class="container-fluid p-0">
       <!-- header -->
       <header>
         <!-- navbar -->
-        <nav class="navbar d-flex flex-row justify-content-center align-items-center">
+        <nav class="navbar d-flex flex-row justify-content-center align-items-center shadow">
           <div class="row w-100 d-flex flex-row justify-content-between align-items-center">
             <!-- logo -->
             <div class="col-2 d-flex justify-content-center align-items-center">
@@ -56,27 +56,15 @@
         </nav>
       </header>
       <!-- main -->
-      <main class="main d-md-flex justify-content-center align-items-center flex-column">
-        <div class="baniere-title w-100 d-flex justify-content-center align-items-center flex-column">
-          <h1 class="title m-0 p-2 d-flex align-items-center justify-content-center text-center text-white font-weight-bold">Chambly International</h1>
-          <p class="slogan m-0 text-white text-center">"Un geste pour eux, un geste pour vous."</p>
+      <main class="main">
+        <div class="baniere-title d-flex justify-content-center align-items-center flex-column">
+          <h1 class="title p-2 d-flex align-items-center justify-content-center text-center text-white font-weight-bold">Chambly International</h1>
         </div>
-        <!-- présentation -->
-          <div class="row m-0 d-flex justify-content-center">
-            <div class="col-md-6 descript-title d-flex justify-content-center flex-column">
-              <h2 class="font-weight-bold p-4 text-center">Qui somme nous ?</h2>
-              <p class="p-4 text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            </div>
-            <!-- <div class="col descript-text d-flex justify-content-center flex-column">
-              <h2 class="font-weight-bold p-4 text-center">Nos Objectifs : </h2>
-              <p class="p-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            </div> -->
+        <div class="row">
+          <div class="col">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
-          <!-- donation -->
-          <div class="donation d-flex justify-content-center align-items-center flex-column">
-            <h3 class="text-white font-weight-bold text-center m-4">Pour soutenir l'association</h3>
-            <a href="#" class="don text-decoration-none font-weight-bold m-4 pl-4 pr-4 pt-1 pb-1">Faire un don</a>
-          </div>
+        </div>
       </main>
       <!-- footer -->
       <footer>
