--- a/index.html
+++ b/index.html
@@ -59,13 +59,23 @@
       <main class="main d-md-flex justify-content-center align-items-center flex-column">
         <div class="baniere-title w-100 d-flex justify-content-center align-items-center flex-column">
           <h1 class="title m-0 p-2 d-flex align-items-center justify-content-center text-center text-white font-weight-bold">Chambly International</h1>
-          <p class="slogan m-0 text-white text-center">"Un geste pour eux, un geste pour vous."</p>
+          <p class="slogan m-0 text-white text-center">"Un geste pour eux, c'est un geste pour vous."</p>
         </div>
         <!-- présentation -->
           <div class="row m-0 d-flex justify-content-center">
             <div class="col-md-6 descript-title d-flex justify-content-center flex-column">
               <h2 class="font-weight-bold p-4 text-center">Qui somme nous ?</h2>
-              <p class="p-4 text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              <p class= "p-4 text-center">Nous sommes Chambly Internationnal, une association humanitaire à but non lucratifbasé à Chambly dans l’Oise.</p>
+            </div>
+            <!-- <div class="col descript-text d-flex justify-content-center flex-column">
+              <h2 class="font-weight-bold p-4 text-center">Nos Objectifs : </h2>
+              <p class="p-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            </div> -->
+          </div>
+          <div class="row descript-goal m-0 d-flex justify-content-center">
+            <div class="col-md-6 descript-title d-flex justify-content-center flex-column">
+              <h2 class="font-weight-bold p-4 text-center text-white">Nos Objectifs : </h2>
+              <p class="p-4 text-center text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             </div>
             <!-- <div class="col descript-text d-flex justify-content-center flex-column">
               <h2 class="font-weight-bold p-4 text-center">Nos Objectifs : </h2>
