--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- header -->
       <header>
         <!-- navbar -->
-        <nav class="navbar d-flex flex-row justify-content-center align-items-center">
+        <nav class="navbar d-flex flex-row justify-content-center align-items-center shadow">
           <div class="row w-100 d-flex flex-row justify-content-between align-items-center">
             <!-- logo -->
             <div class="col-2 d-flex justify-content-center align-items-center">
@@ -57,40 +57,57 @@
       </header>
       <!-- main -->
       <main class="main d-md-flex justify-content-center align-items-center flex-column">
-        <div class="baniere-title w-100 d-flex justify-content-center align-items-center flex-column">
+        <!-- Bannière -->
+        <div class="baniere-title w-100 mb-xl-2 d-flex justify-content-center align-items-center flex-column">
           <h1 class="title m-0 p-2 d-flex align-items-center justify-content-center text-center text-white font-weight-bold">Chambly International</h1>
           <p class="slogan m-0 text-white text-center">"Un geste pour eux, c'est un geste pour vous."</p>
         </div>
         <!-- présentation -->
-          <div class="row m-0 d-flex justify-content-center">
-            <div class="col-md-6 descript-title d-flex justify-content-center flex-column">
-              <h2 class="font-weight-bold p-4 text-center">Qui somme nous ?</h2>
-              <p class= "p-4 text-center">Nous sommes Chambly Internationnal, une association humanitaire à but non lucratifbasé à Chambly dans l’Oise.</p>
+          <div class="row descript-goal m-0 d-flex justify-content-center">
+            <div class="col-xl-4 mt-xl-2 mb-xl-2 mr-xl-2 descript-title d-flex justify-content-center flex-column">
+              <h2 class="font-weight-bold p-4 text-white">Notre histoire</h2>
+              <p class="p-4 text-white">
+                L’association Chambly International a vu le jour en Septembre 2012. Créée par Youssef Zaoui, jeune étudiant de 19 ans (au moment de la création) suite à son voyage humanitaire au Gabon pour un projet citoyen avec son école de commerce. Cette expérience le marque à jamais et il décide en rentrant en France de créer sa propre association humanitaire. Il espère venir en aide aux personnes en situation précaire à travers le monde. L’association compte désormais une vingtaine d’adhérents et une cinquantaine de bénévoles sur des évènements ponctuels.
+              </p>
             </div>
-            <!-- <div class="col descript-text d-flex justify-content-center flex-column">
-              <h2 class="font-weight-bold p-4 text-center">Nos Objectifs : </h2>
-              <p class="p-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            </div> -->
+
+            <div class="col-xl-7 mt-xl-2 mb-xl-2 ml-xl-2 bg-secondary descript-img1 d-flex justify-content-center flex-column">
+            </div>
           </div>
           <div class="row descript-goal m-0 d-flex justify-content-center">
-            <div class="col-md-6 descript-title d-flex justify-content-center flex-column">
-              <h2 class="font-weight-bold p-4 text-center text-white">Nos Objectifs : </h2>
-              <p class="p-4 text-center text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <div class="col-xl-7 mt-xl-2 mb-xl-2 mr-xl-2 bg-secondary descript-img2 d-flex justify-content-center flex-column">
             </div>
-            <!-- <div class="col descript-text d-flex justify-content-center flex-column">
-              <h2 class="font-weight-bold p-4 text-center">Nos Objectifs : </h2>
-              <p class="p-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            </div> -->
+            <div class="col-xl-4 mt-xl-2 mb-xl-2 ml-xl-2 descript-title d-flex justify-content-center flex-column">
+              <h2 class="font-weight-bold p-4 text-white">Nos Principaux Objectifs</h2>
+              <p class="p-4 text-white">
+                 En plus de venir en aide aux populations en difficultés à travers le monde, Chambly International intervient auprès des orphelins, des enfants en situation de handicap et des enfants vivant en zone géographique reculée à travers la promotion et la sensibilisation d’un accès à l’éducation pour tous. L’objectif n’est pas seulement d’amener la scolarisation aux enfants mais également de sensibiliser les acteurs étatiques et le grand public à l’importance de l’éducation pour les générations à venir et ce, sans aucune distinction.
+              </p>
+            </div>
           </div>
           <!-- donation -->
-          <div class="donation d-flex justify-content-center align-items-center flex-column">
-            <h3 class="text-white font-weight-bold text-center m-4">Pour soutenir l'association</h3>
-            <a href="#" class="don text-decoration-none font-weight-bold m-4 pl-4 pr-4 pt-1 pb-1">Faire un don</a>
+          <div class="row m-0 d-flex justify-content-center">
+            <div class="col-xl-4 donation mt-xl-2 mb-xl-2 mr-xl-2 d-flex justify-content-center align-items-center flex-column">
+              <a href="#" class="don text-decoration-none font-weight-bold pl-4 pr-4 pt-1 pb-1">Faire un don</a>
+            </div>
+            <div class="col-xl-7 thanks mt-xl-2 mb-xl-2 ml-xl-2 d-flex justify-content-center align-items-center flex-column">
+              <p class="text-center text-white font-weight-bold p-4 m-0">Merci infiniment pour votre soutien depuis notre création. Vous êtes les premiers responsables de notre développement. Ensemble nous sommes plus forts.</p>
+            </div>
           </div>
       </main>
       <!-- footer -->
-      <footer>
-
+      <footer class="footer mt-md-2 d-flex justify-content-center align-items-center flex-column">
+        <div class="row d-flex justify-content-center align-items-center">
+          <a href="" class="social m-4">
+            <img src="assets/img/facebook(1).png" alt="">
+          </a>
+          <a href="" class="social m-4">
+            <img src="assets/img/instagram(1).png" alt="">
+          </a>
+          <a href="" class="social m-4">
+            <img src="assets/img/twitter.png" alt="">
+          </a>
+        </div>
+        <p class="text-white">Chambly International©</p>
       </footer>
     </div>
 
