--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
             </div>
             <!-- menu items -->
             <div class="col-md d-xl-flex d-none flex-row justify-content-around align-items-center">
-              <a href="#" class="menu-items text-decoration-none font-weight-bold">Accueil</a>
-              <a href="#" class="menu-items text-decoration-none font-weight-bold">Galerie</a>
-              <a href="#" class="menu-items text-decoration-none font-weight-bold">Contact</a>
-              <a href="#" class="don text-decoration-none font-weight-bold pl-4 pr-4 pt-1 pb-1">Faire un don</a>
+              <a href="#" class="menu-items text-decoration-none font-weight-bold pl-4 pr-4">Accueil</a>
+              <a href="#" class="menu-items text-decoration-none font-weight-bold pl-4 pr-4">Galerie</a>
+              <a href="#" class="menu-items text-decoration-none font-weight-bold pl-4 pr-4">Contact</a>
+              <a href="#" class="menu-items text-decoration-none font-weight-bold pl-4 pr-4">Qui sommes nous ?</a>
+              <a href="#" class="don1 text-decoration-none font-weight-bold pl-4 pr-4 pt-1 pb-1">Faire un don</a>
             </div>
             <!-- menu burger -->
 
@@ -43,13 +44,12 @@
               </div>
 
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav d-flex justify-content-center">
-                <a class="nav-item nav-link menu-items text-decoration-none font-weight-bold text-center" href="#">Accueil</a>
-                <a class="nav-item nav-link menu-items text-decoration-none font-weight-bold text-center" href="#">Galerie</a>
-                <a class="nav-item nav-link menu-items text-decoration-none font-weight-bold text-center" href="#">Contact</a>
-                <div class="don-button d-flex justify-content-center mt-2">
-                  <a class="nav-item nav-link don text-decoration-none text-center font-weight-bold w-50 pl-4 pr-4 pt-1 pb-1" href="#" tabindex="-1" aria-disabled="true">Faire un don</a>
-                </div>
+              <div class="navbar-nav d-flex justify-content-center align-items-center">
+                <a href="#" class="menu-items text-decoration-none font-weight-bold pl-2 pr-2 m-2">Accueil</a>
+                <a href="#" class="menu-items text-decoration-none font-weight-bold pl-2 pr-2 m-2">Galerie</a>
+                <a href="#" class="menu-items text-decoration-none font-weight-bold pl-2 pr-2 m-2">Contact</a>
+                <a href="#" class="menu-items text-decoration-none font-weight-bold pl-2 pr-2 m-2">Qui sommes nous ?</a>
+                <a href="#" class="don1 text-decoration-none font-weight-bold pl-4 pr-4 pt-1 pb-1 m-4">Faire un don</a>
               </div>
             </div>
           </div>
@@ -87,7 +87,7 @@
           <!-- donation -->
           <div class="row m-0 d-flex justify-content-center">
             <div class="col-xl-4 donation mt-xl-2 mb-xl-2 mr-xl-2 d-flex justify-content-center align-items-center flex-column">
-              <a href="#" class="don text-decoration-none font-weight-bold pl-4 pr-4 pt-1 pb-1">Faire un don</a>
+              <a href="#" class="don2 text-decoration-none font-weight-bold pl-4 pr-4 pt-1 pb-1">Faire un don</a>
             </div>
             <div class="col-xl-7 thanks mt-xl-2 mb-xl-2 ml-xl-2 d-flex justify-content-center align-items-center flex-column">
               <p class="text-center text-white font-weight-bold p-4 m-0">Merci infiniment pour votre soutien depuis notre création. Vous êtes les premiers responsables de notre développement. Ensemble nous sommes plus forts.</p>
