--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a href="#" class="menu-items text-decoration-none font-weight-bold pl-4 pr-4">Accueil</a>
               <a href="#" class="menu-items text-decoration-none font-weight-bold pl-4 pr-4">Galerie</a>
               <a href="#" class="menu-items text-decoration-none font-weight-bold pl-4 pr-4">Contact</a>
-              <a href="#" class="menu-items text-decoration-none font-weight-bold pl-4 pr-4">Qui sommes nous ?</a>
+              <a href="#" class="menu-items text-decoration-none font-weight-bold pl-4 pr-4">À propos</a>
               <a href="#" class="don1 text-decoration-none font-weight-bold pl-4 pr-4 pt-1 pb-1">Faire un don</a>
             </div>
             <!-- menu burger -->
@@ -48,7 +48,7 @@
                 <a href="#" class="menu-items text-decoration-none font-weight-bold pl-2 pr-2 m-2">Accueil</a>
                 <a href="#" class="menu-items text-decoration-none font-weight-bold pl-2 pr-2 m-2">Galerie</a>
                 <a href="#" class="menu-items text-decoration-none font-weight-bold pl-2 pr-2 m-2">Contact</a>
-                <a href="#" class="menu-items text-decoration-none font-weight-bold pl-2 pr-2 m-2">Qui sommes nous ?</a>
+                <a href="#" class="menu-items text-decoration-none font-weight-bold pl-2 pr-2 m-2">À propos</a>
                 <a href="#" class="don1 text-decoration-none font-weight-bold pl-4 pr-4 pt-1 pb-1 m-4">Faire un don</a>
               </div>
             </div>
